[package]
name = "tauri-plugin"
version = "2.2.0"
description = "Build script and runtime Tauri plugin definitions"
authors = ["Tauri Programme within The Commons Conservancy"]
homepage = "https://tauri.app/"
repository = "https://github.com/tauri-apps/tauri"
categories = ["gui", "web-programming"]
license = "Apache-2.0 OR MIT"
edition = "2021"
rust-version = "1.77.2"

[package.metadata.docs.rs]
features = ["build", "runtime"]
rustc-args = ["--cfg", "docsrs"]
rustdoc-args = ["--cfg", "docsrs"]

[features]
build = [
  "dep:anyhow",
  "dep:serde",
  "dep:serde_json",
  "dep:glob",
  "dep:toml",
  "dep:plist",
  "dep:walkdir",
]
runtime = []

[dependencies]
anyhow = { version = "1", optional = true }
serde = { version = "1", optional = true }
tauri-utils = { version = "2.4.0", default-features = false, features = [
  "build",
] }
serde_json = { version = "1", optional = true }
glob = { version = "0.3", optional = true }
toml = { version = "0.8", optional = true }
# Our code requires at least 0.8.18 so don't simplify this to 0.8
schemars = { version = "0.8.18", features = ["preserve_order"] }
walkdir = { version = "2", optional = true }

[target."cfg(target_os = \"macos\")".dependencies]
plist = { version = "1", optional = true }
